--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:screenOrientation="portrait"
             android:label="@string/app_name"/>
         <activity android:name=".PlaylistActivity"
-            android:label="@string/playlist"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
