--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 22 00:37:29 BRT 2017
-ndk.dir=C\:\\Users\\WorkOnly\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\WorkOnly\\AppData\\Local\\Android\\Sdk
+#Sat Feb 25 16:22:10 BRT 2017
+sdk.dir=C\:\\Users\\Usuario\\AppData\\Local\\Android\\Sdk
