--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 11 10:41:06 BRT 2017
-ndk.dir=C\:\\Users\\WorkOnly\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\WorkOnly\\AppData\\Local\\Android\\Sdk
+#Sat Mar 11 13:32:02 BRT 2017
+sdk.dir=C\:\\Users\\Usuario\\AppData\\Local\\Android\\Sdk
